2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More MT alpha code optimizations.
	
	* tools/lib/t-utc0/slimpl.m4: Use type `long' for thread indexes.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Restore ability to process multiple input files.

	When `slc' was made more robust to special characters, a
	regression was introduced. This is now fixed.

	* tools/bin/slc.in: `"${inputs[@]}"', not `$inputs'.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix example.

	* programs/demo/keyblit.c: Place `sl_enddef' properly.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More MT alpha code optimizations.

	* programs/bin/spp: Optimize default family settings away,
	including cases where there is no whitespace before the constant
	value. For every killed instruction, also eliminate the following
	`swch' if it is there.
 
2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New demo program.

	The `keyblit' programs takes two arrays and one integer as
	input (the key), then applies the 2nd array (sprite) onto the
	1st (background) for every item of the sprite that is not equal to
	the key.
	
	* programs/demo/keyblit.c.d,
	* programs/demo/keyblit.c: New.

	* programs/demo/blitz.c.d,
	* programs/demo/blitz.c: Rename to...
	
	* programs/demo/bitblt.c.d,
	* programs/demo/bitblt.c: ... here.

	* programs/demo/Makefile.am: Update accordingly.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New demo program.

	The `blitz' programs takes three arrays as input, then applies the
	3rd (sprite) onto the 1st (image) using the 2nd (mask), using the
	`bitblt' operation.
	
	* programs/demo/blitz.c.d,
	* programs/demo/blitz.c: New.

	* programs/demo/Makefile.am: Update accordingly.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Code optimizations for MT alpha.

	Assembly optimizations common to all MT targets are moved
	to the separate slc phase `E', so that they apply to all
	assembly sources regardless of origin. 
